<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_columnSpan="4"
    android:gravity="center"
    android:orientation="horizontal">
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_one"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_two"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_three"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_x"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_four"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_five"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_six"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_minus"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_seven"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_eight"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_nine"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_plus"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center"
        >
        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_zero"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>

        <Button
            android:id="@+id/button_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_point"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_equally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_equally"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
        <Button
            android:id="@+id/button_split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_split"
            android:textSize="@dimen/button_text"
            android:layout_margin="@dimen/margin_low_4sp"/>
    </TableRow>
</TableLayout>